# handpose_x_ncnn

./: CMakeLists.txt  README.md
include/: handpose.h  yolov11.h
src/: handpose.cpp  main.cpp  yolov11.cpp
weights/: hand_pnnx.py.ncnn.param  resnet_50_size_256_handposeX.ncnn.param
